# 059-fingpt-financial-llm

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  bybit_client.py  data_loader.py  fingpt_sentiment.py  requirements.txt  signals.py
python/examples/: 01_sentiment_demo.py  02_signal_generation.py  03_crypto_bybit.py  04_backtest_demo.py
rust_fingpt/: Cargo.toml
rust_fingpt/src/: api.rs  backtest.rs  data.rs  error.rs  lib.rs  sentiment.rs  signals.rs
