[package]
name = "fingpt_trading"
version = "0.1.0"
edition = "2021"
authors = ["AI4Finance Foundation"]
description = "FinGPT Trading - Open-source financial LLM toolkit for sentiment analysis and trading"
license = "MIT"
repository = "https://github.com/AI4Finance-Foundation/FinGPT"
keywords = ["finance", "llm", "sentiment", "trading", "crypto"]
categories = ["finance", "science"]

[lib]
name = "fingpt_trading"
path = "src/lib.rs"

[[bin]]
name = "sentiment_demo"
path = "src/bin/sentiment_demo.rs"

[[bin]]
name = "signal_generation"
path = "src/bin/signal_generation.rs"

[[bin]]
name = "crypto_bybit"
path = "src/bin/crypto_bybit.rs"

[[bin]]
name = "backtest_demo"
path = "src/bin/backtest_demo.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
